[metadata]
name = gtfSymbiosis
version = 0.0.2
author = Samuel Rosean
author_email = samrosean@gmail.com
description = construction of transcriptome from GTF files, and comparison between GTF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samrosean/GTF_Symbiosis
classifiers=
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License


[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pandas
    statistics
    numpy
    ensembl_rest
    matplotlib
    pywaffle
    prettytable
    Bio
    networkx
    upsetplot
    seaborn
    Venn

